Fixed layout shifting when page loads, and also a scrolling issue when an error modal popped up on top of a movie data modal

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -295,6 +295,11 @@ li {
   border: 0;
 }
 
+/* Used at .app-container to avoid layout shifts when API is loading home movies */
+.invisible-box {
+  height: 200vh;
+}
+
 /* ---------------------- */
 /*        SECTIONS        */
 /* ---------------------- */
